--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.github.dhaval2404:imagepicker:2.1'
     implementation 'com.github.bumptech.glide:glide:5.0.5'
 
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
 
 
 }
